Fixed playlist not fetching on page load added end time clarification to admin page set up next countdown to the text output of a date object

--- a/scheduler/html/index.html
+++ b/scheduler/html/index.html
@@ -326,7 +326,7 @@
             var listElement = document.createElement('li');
 
             listElement.setPosition = function (index) {
-                playTime.innerText = getLocalPlayTime(index);
+                playTime.innerText = "End time: " + getLocalPlayTime(index);
                 EndTime = getNextPlayTimeInMiliseconds(index);
             }
 
