--- a/scheduler/html/index.html
+++ b/scheduler/html/index.html
@@ -96,12 +96,17 @@
         /*=======================================*/
 
         body {
-            margin: 50px;
+            margin: 15px;
+        }
+
+        #queueTable {
+            padding: 0px;
         }
 
         #queueTable li {
             height: 60px;
             list-style: none;
+            min-width: 1400px;
         }
 
         #queueTable li button {
@@ -133,12 +138,20 @@
         #currentlyPlaying {
             margin: 20px 0px;
         }
+
+        .history {
+            opacity: 0.5;
+            background-color: rgba(247, 211, 145, 0.15);
+        }
+
+        .playing {
+            background-color: rgba(77, 215, 0, 0.15);
+        }
     </style>
     <script src="html5sortable.min.js"></script>
 </head>
 
 <body>
-    <button class="red" onclick="playNextVideo()">Play Next</button>
     <div id="currentlyPlaying">
         <b>Currently Playing</b>
         <br />
@@ -151,16 +164,21 @@
         <p>Time Remaining:</p>
         <div id="playingRemaining">N/A</div>
         <br />
+
+        <!--
         <p>Minutes per stream</p>
         <input id="minutesPerItem" placeholder="30" size="16" onchange="setMinutesPerItem()">
         <br />
+        -->
+
         <p>Secret String</p>
         <input id="secretString" placeholder="Not Set" size="16">
         <button class="button"
             onclick='setURLAndSecret(document.getElementById("secretString").value); document.getElementById("secretString").value="";'>
             Set Secret
         </button>
-        <div id="statusText"></div>
+        <br />
+        <pre id="statusText"></pre>
     </div>
     <button class="button" onclick="addNewRow()">New Item</button>
     <button class="button orange" onclick="saveToScheduler()">Publish</button>
@@ -176,49 +194,61 @@
         var fieldMinutesPerItem = document.getElementById("minutesPerItem");
 
         var statusText = document.getElementById("statusText");
-        var statusHistory = ["", "", "", "", ""];
+        var statusHistory = ["", "", "", "", "", "", "", "", "", ""];
+        var statusCache = "";
+        var historyLength = 3;
 
-        function setStatus(statusString) {
-            for (let i = statusHistory; i < array.length; i--) {
-                const element = array[i];
-
+        function setStatus(category, statusString) {
+            statusString = new Date().toLocaleTimeString() + " [" + category + "]: " + statusString;
+            for (let i = statusHistory.length - 1; i > 0; i--) {
+                statusHistory[i] = statusHistory[i - 1];
             }
+
+            statusHistory[0] = statusString;
+            statusCache = "";
+
+            updateStatusDisplay();
         }
+
+        function updateStatusDisplay() {
+            for (let i = statusHistory.length - 1; i >= 0; i--) {
+                statusCache += statusHistory[i] + "\n";
+            }
+            statusText.innerText = statusCache;
+        }
+
+        updateStatusDisplay();
 
         var listItems = [];
         var playerWindow;
 
         var minutesPerItem = 30;
-        fieldMinutesPerItem.value = minutesPerItem;
+        // fieldMinutesPerItem.value = minutesPerItem;
 
-        /*
-        function openVideoWindow() {
-            playerWindow = window.open("youtubeEmbedTest.html", "_blank");
-            playerWindow.focus();
-        }
-        openVideoWindow();
-        */
 
-        function playNextVideo() {
-            if (listItems.length == 0 || listItems[0].videoID.value == "") {
-                updateTimes();
+        function updateNowPlaying() {
+            if (listItems.length < historyLength || listItems[historyLength].videoID.value == "") {
                 return;
             }
 
-            playVideo(listItems[0].videoID.value);
-            nowPlayingNote.innerText = listItems[0].note.value;
-            nowPlayingVideoID.innerText = listItems[0].videoID.value;
-            listItems[0].removeVideo();
-
-        }
-
-        function playVideo(videoID) {
-            playerWindow.playVideo(videoID);
+            nowPlayingNote.innerText = listItems[historyLength].note.value;
+            nowPlayingVideoID.innerText = listItems[historyLength].videoID.value;
         }
 
         function addNewRow() {
             sortabeTable.appendChild(makeItemRow());
             setSortable();
+        }
+
+        function updateListItemsFromTable() {
+            listItems = [];
+            for (let i = 0; i < sortabeTable.children.length; i++) {
+                listItems.push(sortabeTable.children[i]);
+                listItems[i].setPosition(i);
+            }
+
+            updateNowPlaying();
+            updateTimes();
         }
 
         function setSortable() {
@@ -231,7 +261,10 @@
                     listItems.push(e.detail.destination.items[i]);
                     e.detail.destination.items[i].setPosition(i);
                 }
+
+                updateNowPlaying();
             });
+
             updateTimes();
         }
 
@@ -252,6 +285,7 @@
         // 1 - etc
         // 2 - etc
         function getNextPlayTimeInMiliseconds(queuePosition) {
+            queuePosition -= historyLength;
             return (Math.ceil(Date.now() / (minutesPerItem * 60 * 1000)) * minutesPerItem * 60 * 1000) + (minutesPerItem * 60 * 1000 * queuePosition);
         }
 
@@ -280,21 +314,29 @@
 
         function checkTime() {
 
-            nextPlayTime = getNextPlayTimeInMiliseconds(0);
+            nextPlayTime = getNextPlayTimeInMiliseconds(historyLength);
 
             nowPlayingRemaining.innerText = sec2time((nextPlayTime - (Date.now())) / 1000);
 
             // console.log("nextPlayTime vs lastPlayTime");
             // console.log(nextPlayTime + " vs " + lastPlayTime);
 
-            if (lastPlayTime == undefined)
+            if (lastPlayTime == undefined) {
                 lastPlayTime = nextPlayTime;
-
-            if (nextPlayTime > lastPlayTime) {
+                updateNowPlaying();
+            }
+            else if (nextPlayTime > lastPlayTime) {
                 lastPlayTime = nextPlayTime;
-                playNextVideo();
+                removeHistoryItem();
+                updateNowPlaying();
             }
             // Called once per second
+        }
+
+        function removeHistoryItem() {
+            if (listItems != undefined || listItems.length > 3) {
+                listItems[0].removeVideo();
+            }
         }
 
         function getQueryVariable(getVar, url) {
@@ -312,6 +354,17 @@
             }
         }
 
+        function removeClasses(listElement) {
+            listElement.classList.remove("history");
+            listElement.classList.remove("playing");
+        }
+        function addHistoryClass(listElement) {
+            listElement.classList.add("history");
+        }
+        function addPlayingClass(listElement) {
+            listElement.classList.add("playing");
+        }
+
         function makeItemRow(
             inputItem = {
                 Note: "",
@@ -324,14 +377,26 @@
         ) {
             var EndTime;
             var listElement = document.createElement('li');
+            listElement.indexPosition
 
             listElement.setPosition = function (index) {
-                playTime.innerText = "End time: " + getLocalPlayTime(index);
+                removeClasses(listElement);
+                // index - 1 to display start time instead of end time
+                if (getLocalPlayTime(index - 1) < Date.now() && getLocalPlayTime(index) > Date.now()) {
+                    playTime.innerText = "Currently Playing";
+                    addPlayingClass(listElement);
+                } else if (getLocalPlayTime(index - 1) < Date.now()) {
+                    playTime.innerText = "History";
+                    addHistoryClass(listElement);
+                } else {
+                    playTime.innerText = "Start time: " + getLocalPlayTime(index - 1).toLocaleString('en-US');
+                }
                 EndTime = getNextPlayTimeInMiliseconds(index);
+                listElement.indexPosition = index;
             }
 
             var playTime = document.createElement('div');
-            var playButton = document.createElement('button');
+            var duplicateButton = document.createElement('img');
             var testButton = document.createElement('button');
 
             var note = document.createElement('input');
@@ -387,6 +452,16 @@
                 win.focus();
             };
 
+            listElement.duplicateVideo = function () {
+                console.log("listElement.indexPosition: ", listElement.indexPosition);
+                sortabeTable.insertBefore(makeItemRow(listElement.export()), sortabeTable.children[listElement.indexPosition]);
+                updateListItemsFromTable();
+            };
+
+            duplicateButton.src = "img/plus.svg";
+            duplicateButton.onclick = listElement.duplicateVideo;
+
+
             listElement.removeVideo = function () {
                 listItems.splice(listItems.indexOf(listElement), 1);
                 listElement.remove();
@@ -397,6 +472,7 @@
             removeButton.onclick = listElement.removeVideo;
 
             listElement.appendChild(playTime);
+            listElement.appendChild(duplicateButton);
             listElement.appendChild(testButton);
             listElement.appendChild(note);
             listElement.appendChild(videoID);
@@ -508,7 +584,9 @@
                 return;
             }
 
-            var importTime = Date.now();
+            var historyOffset = historyLength * (minutesPerItem * 60 * 1000);
+            var importTime = Date.now() - historyOffset;
+
             importObj.sort(function (a, b) { return a.EndTime - b.EndTime });
 
             // Remove existing elements
@@ -523,8 +601,6 @@
                     sortabeTable.appendChild(makeItemRow(importObj[i]));
                 }
             }
-            // Update times
-            updateTimes();
             // Set up the sortable table
             setSortable();
         }
@@ -552,7 +628,7 @@
                 return;
             } else {
                 secret = secretObj.s;
-                requestURL = secretObj.r;
+                requestURL = secretObj.r.replace(/update$/g, "");
                 document.cookie = "secretString=" + secretString + "; expires=Fri, 31 Dec 9999 23:59:59 GMT";
                 document.getElementById("secretString").placeholder = "Unchanged";
             }
@@ -560,8 +636,16 @@
 
         var scheduleURL = "https://schedule.quarantineshow.com/schedule.json";
         function readRemoteSchedule() {
-            const request = new Request(scheduleURL, {
-                method: 'GET'
+            if (secret == undefined || secret == "") {
+                alert("Invalid secret");
+                return;
+            }
+            setStatus("Read Schedule", "Loading updated schedule.");
+            const request = new Request(requestURL + "get", {
+                method: 'POST',
+                body: JSON.stringify({
+                    secret: secret
+                })
             });
 
             fetch(request)
@@ -569,7 +653,9 @@
                     return response.json();
                 })
                 .then((data) => {
+                    setStatus("Read Schedule", "Importing schedule.");
                     importObject(data);
+                    setStatus("Read Schedule", "Done.");
                 });
         }
 
@@ -579,9 +665,10 @@
                 return;
             }
 
+            setStatus("Save Schedule", "Saving schedule.");
             scheduleString = exportJSON();
 
-            const request = new Request(requestURL, {
+            const request = new Request(requestURL + "update", {
                 method: 'POST',
                 body: JSON.stringify({
                     secret: secret,
@@ -591,6 +678,13 @@
 
             fetch(request).then(response => {
                 console.log(response);
+                if (response.status == 200) {
+                    setStatus("Save Schedule", "Done.");
+                } else {
+                    setStatus("Save Schedule", "Something went wrong: " + JSON.stringify(response));
+                }
+
+                readRemoteSchedule();
             });
         }
 
