Added youtube shortened link parsing

--- a/scheduler/html/index.html
+++ b/scheduler/html/index.html
@@ -349,6 +349,8 @@
             if (url.includes("=")) {
                 var urlParams = new URLSearchParams(url);
                 return urlParams.get(getVar);
+            } else if (url.includes("https://youtu.be/")) {
+                return url.substring(17)
             } else {
                 return url;
             }
